--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,4 +4,4 @@
 
 @import "layout/default", "layout/header", "layout/navigation", "layout/main";
 
-@import "components/forms";
+@import "components/forms", "components/buttons";
