--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,30 +5,29 @@
 {% block main %}
     <h2>Connexion</h2>
 
-    <form method="post" class="app-form">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+    {% if app.user %}
+        <div class="app-alert warning">
+            You are logged in as {{ app.user.userIdentifier }},
+            <a href="{{ path('app_logout') }}">Logout</a>
+        </div>
 
-        {% if app.user %}
-            <div class="mb-3">
-                You are logged in as {{ app.user.userIdentifier }},
-                <a href="{{ path('app_logout') }}">Logout</a>
-            </div>
+        {% if error %}
+            <div class="app-alert danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
-        <div>
-            <label for="inputEmail">Email</label>
+    {% endif %}
+
+    <form method="post" class="app-form">
+        <div class="form-group">
+            <label for="inputEmail">e-mail</label>
             <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
         </div>
-        <div>
-            <label for="inputPassword">Password</label>
+        <div class="form-group">
+            <label for="inputPassword">mot de passe</label>
             <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
         </div>
 
-        <div>
-            <input type="hidden" name="_csrf_token"
-                    value="{{ csrf_token('authenticate') }}"
-            >
+        <div class="form-group">
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
             {#
             Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
@@ -41,7 +40,7 @@
             </div>
             #}
 
-            <button class="btn btn-lg btn-primary" type="submit">
+            <button class="app-btn cta" type="submit">
                 Connexion
             </button>
         </div>
